# advent-of-code-2024

./: .gitignore  LICENSE  README.md  aoc_2024.opam  dune-project
lib/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  dune
lib/utils/: coordinate.ml  coordinate.mli  dune
