(lang dune 3.16)

(name aoc_2024)

(generate_opam_files true)

(source
 (github maehler/aoc_2024))

(authors "Niklas Mähler")

(maintainers "Niklas Mähler")

(license LICENSE)

(package
 (name aoc_2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  ("advent of code" "ocaml")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
